# libspecbleach

./: .agents.md  .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  meson.build  meson_options.txt
.agent/skills/development_guidelines/: SKILL.md
.agent/skills/implement_dsp_processor/: SKILL.md
.agent/skills/meson_build/: SKILL.md
.github/workflows/: build.yml  lint.yml
debian/: README.Debian  README.source  changelog  control  copyright  libspecbleach-dev.install  libspecbleach.cron.d.ex  libspecbleach.doc-base.ex  libspecbleach1.install  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
debian/upstream/: metadata.ex
example/: adenoiser_demo.c  denoiser_demo.c  meson.build
examples/: adenoiser_demo.c  denoiser_demo.c  meson.build
include/: meson.build  specbleach.h  specbleach_2d_denoiser.h  specbleach_adenoiser.h  specbleach_denoiser.h
include/specbleach/: meson.build  specbleach_adenoiser.h  specbleach_denoiser.h  specbleach_parameters.h
src/: meson.build  specbleach.c  specbleach_adenoiser.c  specbleach_denoiser.c
src/adaptivedenoiser/: adaptive_denoiser.c  adaptive_denoiser.h
src/denoiser/: spectral_denoiser.c  spectral_denoiser.h
src/interfaces/: spectral_processor.h
src/processors/: meson.build  specbleach_2d_denoiser.c  specbleach_adenoiser.c  specbleach_denoiser.c
src/processors/adaptivedenoiser/: adaptive_denoiser.c  adaptive_denoiser.h
src/processors/denoiser/: spectral_denoiser.c  spectral_denoiser.h
src/processors/denoiser2d/: spectral_2d_denoiser.c  spectral_2d_denoiser.h
src/shared/: configurations.h  meson.build  spectral_processor.h
src/shared/denoiser_logic/: meson.build
src/shared/denoiser_logic/core/: denoise_mixer.c  denoiser_core.c  denoiser_core.h  denoiser_post_process.c  denoiser_post_process.h  denoiser_profile_core.c  denoiser_profile_core.h  noise_floor_manager.c  noise_floor_manager.h  noise_profile.c  noise_profile.h
src/shared/denoiser_logic/estimators/: adaptive_noise_estimator.c  adaptive_noise_estimator.h  brandt_noise_estimator.c  brandt_noise_estimator.h  martin_noise_estimator.c  noise_estimator.c  noise_estimator.h  spp_mmse_noise_estimator.c  spp_mmse_noise_estimator.h
src/shared/denoiser_logic/processing/: gain_calculator.c  gain_calculator.h  masking_veto.c  masking_veto.h  nlm_filter.c  nlm_filter.h  nlm_filter_avx.c  nlm_filter_internal.h  spectral_whitening.c  spectral_whitening.h  suppression_engine.c  suppression_engine.h  tonal_reducer.c
src/shared/gain_estimation/: gain_estimators.c  gain_estimators.h  meson.build  suppression_engine.c  suppression_engine.h
src/shared/noise_estimation/: adaptive_noise_estimator.c  adaptive_noise_estimator.h  brandt_noise_estimator.c  brandt_noise_estimator.h  louizou_noise_estimator.c  louizou_noise_estimator.h  martin_noise_estimator.c  martin_noise_estimator.h  meson.build  noise_estimator.c  noise_estimator.h  noise_profile.c  noise_profile.h  spp_mmse_noise_estimator.c  tonal_detector.c  tonal_detector.h  tonal_reducer.c  tonal_reducer.h
src/shared/post_estimation/: masking_veto.c  masking_veto.h  meson.build  nlm_filter.c  nlm_filter.h  noise_floor_manager.c  noise_floor_manager.h  postfilter.c  postfilter.h  spectral_whitening.c  spectral_whitening.h
src/shared/pre_estimation/: absolute_hearing_thresholds.c  absolute_hearing_thresholds.h  critical_bands.c  critical_bands.h  masking_estimator.c  masking_estimator.h  meson.build  noise_scaling_criterias.c  noise_scaling_criterias.h  spectral_smoother.c  spectral_smoother.h  transient_detector.c  transient_detector.h
src/shared/stft/: fft_transform.c  fft_transform.h  meson.build  stft_buffer.c  stft_buffer.h  stft_processor.c  stft_processor.h  stft_windows.c  stft_windows.h
src/shared/utils/: absolute_hearing_thresholds.c  critical_bands.c  critical_bands.h  denoise_mixer.c  denoise_mixer.h  general_utils.c  general_utils.h  masking_estimator.c  masking_estimator.h  meson.build  simd_utils.h  spectral_circular_buffer.c  spectral_circular_buffer.h  spectral_features.c  spectral_features.h  spectral_smoother.c  spectral_smoother.h  spectral_trailing_buffer.c  spectral_trailing_buffer.h  spectral_utils.c  spectral_utils.h  tonal_detector.c  tonal_detector.h  transient_detector.c  transient_detector.h
tests/: README.md  generate_reference_files.sh  meson.build  test_adaptive_noise_estimator.c  test_adaptive_noise_estimator_null.c  test_audio_file_regression.c  test_audio_files.c  test_audio_regression.c  test_brandt_noise_estimator.c  test_denoiser_post_process.c  test_fft.c  test_gain_calculator.c  test_gain_estimation.c  test_integration.c  test_louizou_noise_estimator.c  test_martin_noise_estimator.c  test_masking_veto.c  test_nlm_filter.c  test_noise_floor_manager.c  test_noise_profile.c  test_postfilter.c  test_pre_estimation.c  test_shared_utils.c  test_simd_utils.c  test_specbleach_2d_denoiser.c  test_specbleach_denoiser.c  test_spectral_circular_buffer.c  test_spectral_utils.c  test_spectral_whitening.c  test_spp_mmse_noise_estimator.c  test_stft_latency.c  test_suppression_engine.c  test_tonal_detector.c  test_tonal_reducer.c  test_transient_detector.c  test_utils.c
