shared_sources += files(
    'general_utils.c',
    'spectral_features.c',
    'spectral_utils.c',

    'tonal_detector.c',
    'absolute_hearing_thresholds.c',
    'critical_bands.c',
    'transient_detector.c',
    'spectral_smoother.c',
    'masking_estimator.c',
    'spectral_circular_buffer.c',
)